--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 .bg-img{
 
-  background: url('bg.jpg');
+  background: url('https://images.app.goo.gl/mnhiiM2MeAP5oKnU9');
 
   height: 100vh;
 
