--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 .bg-img{
 
-  background: url('https://images.app.goo.gl/mnhiiM2MeAP5oKnU9');
+  background: url('https://www.linkpicture.com/q/images-2022-06-22T010155.889.jpeg');
 
   height: 100vh;
 
